--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+logo: https://res.cloudinary.com/salted-security/image/upload/c_scale,w_250/v1625862731/Github/black-47824_f8jfmg.png
+show_downloads: true
